# GaelO2/GaelO2/routes/api.php
@@ -13,9 +13,10 @@ use Illuminate\Support\Facades\Route;
 | is assigned the "api" middleware group. Enjoy building your API!
 |
 */
-Route::post('user', 'UserController@createUser');
-Route::get('user/{id?}', 'UserController@getUser');
-Route::patch('user', 'UserController@changeUserPassword');
+Route::post('users', 'UserController@createUser');
+Route::get('users/{id?}', 'UserController@getUser');
+Route::patch('users', 'UserController@changeUserPassword');
+Route::delete('users/{id}', 'UserController@deleteUser');
 Route::post('login', 'UserController@login');
 Route::post('register', 'RegisterController@register');
 Route::get('testClean', 'UserController@loginClean');
